style: Add overflow-y:scroll to card 2 to fix the issue with large instruction text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,23 +188,7 @@ body {
     background-color: #0a0c10ed;
     justify-content: center;
   }
-  .random-cocktail {
-    font-family: "Rock Salt", sans-serif;
-    color: #ee82ee;
-    text-transform: capitalize;
-    text-shadow: -20px -5px 20px #ee82ee;
-    box-shadow: 1px 1px 18px 4px#ee82ee;
-    line-height: 22px;
-    letter-spacing: 0.269em;
-    font-weight: 700;
-    border-style: none;
-    border-radius: 23px;
-    background-color: transparent;
-    display: block;
-    position: absolute;
-    bottom: 20px;
-    height: 7%;
-  }
+  
 
 }
 
@@ -243,7 +227,7 @@ body {
 }
 
 .about-plus {
-  margin-left: 15rem;
+  margin-left: 5rem;
 }
 .about-plus ::after {
   content: "-";
@@ -274,6 +258,7 @@ body {
   height: 90vh;
   border-radius: 30px;
   padding: 1rem 1rem;
+  /* overflow-y: scroll; */
   box-shadow: 0 20px 20px rgba(232, 8, 205, 0.58), 0px 0px 50px rgba(155, 41, 216, 0.76);
 }
 
@@ -286,6 +271,7 @@ body {
     margin: 65px;
     height: 70vh;
     padding: 1rem 3rem;
+    left: 13%;
     box-shadow: 0 20px 20px rgba(232, 8, 205, 0.58),
       0px 0px 50px rgba(155, 41, 216, 0.76);
   }
@@ -297,6 +283,7 @@ body {
     height: 90vh;
     border-radius: 30px;
     padding: 1rem 1rem;
+    overflow-y: scroll;
     box-shadow: 0 20px 20px rgba(232, 8, 205, 0.58), 0px 0px 50px rgba(155, 41, 216, 0.76);
   }
   .barman-video {
@@ -309,6 +296,23 @@ body {
 
   }
 
+  .random-cocktail {
+    font-family: "Rock Salt", sans-serif;
+    color: #ee82ee;
+    text-transform: capitalize;
+    text-shadow: -20px -5px 20px #ee82ee;
+    box-shadow: 1px 1px 18px 4px#ee82ee;
+    line-height: 22px;
+    letter-spacing: 0.269em;
+    font-weight: 700;
+    border-style: none;
+    border-radius: 23px;
+    background-color: transparent;
+    display: block;
+    position: absolute;
+    bottom: 20px;
+    height: 7%;
+  }
 }
 
 .icy-cocktail {
@@ -480,3 +484,6 @@ div #map {
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
+.blob {
+  z-index: -1;
+}
